--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": ">=15.0.0"
   },
   "private": true,
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "build": "qwik build",
     "build.client": "vite build",
